syntax = "proto3";

package test.common.router;

import "envoy/config/route/v3alpha/route.proto";
import "test/fuzz/common.proto";

// Structured input for route_fuzz_test.

message RouteTestCase {
  envoy.config.route.v3alpha.RouteConfiguration config = 1;
  test.fuzz.Headers headers = 2;
  uint32 random_value = 3;
}
